# solana-geyser-plugin

./: Cargo.toml  README.md  build.rs
proto/: geyser.proto
src/: lib.rs  plugin.rs  server.rs  service.rs
