[package]
name = "solana-geyser-plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]  # This is important - creates a dynamic library

[dependencies]
solana-geyser-plugin-interface = "1.18"
solana-sdk = "1.18"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# gRPC and async dependencies (choose these matching, working versions)
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.17"
use = "0.0.1-pre.0"
futures-util = "0.3.31"
futures-core = "0.3.31"

[build-dependencies]
tonic-build = "0.11"
